# qtcalculator

./: CMakeLists.txt  readme.md  vcpkg.json
cmake/: ImportDependencies.cmake
src/: main.cpp  pch.h
